--- a/save_money_app/app/src/main/AndroidManifest.xml
+++ b/save_money_app/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.Save_money_app"
         tools:targetApi="31">
         <activity
+            android:name=".ShowItemActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SearchItemActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ListStoresActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ListItemsActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
