--- a/save_money_app/app/src/main/AndroidManifest.xml
+++ b/save_money_app/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,8 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Save_money_app"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        >
         <activity
             android:name=".ShowItemActivity"
             android:exported="false" />
